Fix localhost redirects and add deployment guide

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,11 @@ DB_USER=root
 DB_PASS=
 
 # Site Configuration
-SITE_URL=http://localhost/sarap_local1
-SITE_EMAIL=noreply@saraplocal.com
+# Site Configuration
+11: # SITE_URL is automatically detected!
+12: # - Localhost: http://localhost/sarap_local1
+13: # - Production: https://your-domain.com
+14: SITE_EMAIL=noreply@saraplocal.com
 
 # SMTP Email Configuration (for email verification)
 SMTP_HOST=smtp.gmail.com
