--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@ node_modules/
 frontend/node_modules/
 backend/node_modules/
 
-# Composer
-vendor/
+# Composer (vendor sidebar update - temporarily enabled)
+!pages/vendor/
+# vendor/
 
 # IDE
 .vscode/
